@@ -241,13 +241,25 @@ let rec class_field c i =
 	try
 		let f = PMap.find i c.cl_fields in
 		field_type f , f
-	with
-		Not_found ->
-			match c.cl_super with
-			| None -> raise Not_found
-			| Some (c,params) ->
-				let t , f = class_field c i in
-				apply_params c.cl_types params t , f
+	with Not_found -> try
+		let rec loop = function
+			| [] ->
+				raise Not_found
+			| (c,tl) :: l ->
+				try
+					let t , f = class_field c i in
+					apply_params c.cl_types tl t, f
+				with
+					Not_found -> loop l
+		in
+		loop c.cl_implements
+	with Not_found ->
+		match c.cl_super with
+		| None ->
+			raise Not_found
+		| Some (c,tl) ->
+			let t , f = class_field c i in
+			apply_params c.cl_types tl t , f
 
 let acc_get g p =
 	match g with
@@ -477,6 +489,50 @@ let extend_remoting ctx c t p async prot =
 		| _ -> assert false
 	)
 
+let extend_proxy ctx c t p =
+	if c.cl_super <> None then error "Cannot extend several classes" p;
+	let tclass = load_normal_type ctx t p false in
+	let make_field f args =		
+		let args = List.map (fun (name,o,_) -> name , o, None) args in
+		let eargs = List.map (fun (name,_,_) -> EConst (Ident name) , p) args in
+		f.cf_name , (FFun (f.cf_name,None,[if f.cf_public then APublic else APrivate],[], {
+			f_args = args;
+			f_type = None;
+			f_expr = (EBlock [
+				(EReturn (Some (ECall (
+					(EConst (Ident "handleCall"),p),
+					[(ECall ((EConst (Ident "__unprotect__"),p),[EConst (String f.cf_name),p]),p); (EArrayDecl eargs,p)]
+				),p)),p)
+			],p);
+		}),p)
+	in
+	let class_fields = (match tclass with
+		| TInst (c,params) ->
+			let rec loop c =
+				PMap.fold (fun f acc ->
+					match follow f.cf_type with
+					| TFun (args,ret) ->
+						(try
+							ignore(List.assoc f.cf_name acc);
+							acc
+						with
+							Not_found -> make_field f args :: acc)
+					| _ -> acc
+				) c.cl_fields (match c.cl_super with None -> [] | Some (c,_) -> loop c)
+			in
+			List.map snd (loop c)
+		| _ ->
+			error "Proxy type parameter should be a class" p
+	) in	
+	let tproxy = { tpackage = ["haxe"]; tname = "Proxy"; tparams = [TPNormal t] } in
+	let pname = "P" ^ t.tname in
+	let class_decl = (EClass (pname,None,List.map (fun (s,_) -> s,[]) c.cl_types,[HExtends tproxy; HImplements t],class_fields),p) in
+	let m = (!type_module_ref) ctx ("Proxy" :: t.tpackage, pname) [class_decl] p in
+	c.cl_super <- Some (match m.mtypes with
+		| [TClassDecl c2] -> (c2,List.map snd c.cl_types)
+		| _ -> assert false
+	)
+
 let set_heritance ctx c herits p =
 	let rec loop = function
 		| HPrivate | HExtern | HInterface ->
@@ -487,6 +543,8 @@ let set_heritance ctx c herits p =
 			extend_remoting ctx c t p true true
 		| HExtends { tpackage = ["mt"]; tname = "AsyncProxy"; tparams = [TPNormal t] } ->
 			extend_remoting ctx c t p true false
+		| HExtends { tpackage = ["haxe"]; tname = "Proxy"; tparams = [TPNormal t] } when match c.cl_path with "Proxy" :: _ , _ -> false | _ -> true ->
+			extend_proxy ctx c t p
 		| HExtends t ->
 			if c.cl_super <> None then error "Cannot extend several classes" p;
 			let t = load_normal_type ctx t p false in
@@ -899,34 +957,6 @@ let type_field ctx e i p get =
 	in
 	match follow e.etype with
 	| TInst (c,params) ->
-		let priv = is_parent c ctx.curclass in
-		let find i c =
-			try
-				let f = PMap.find i c.cl_fields in
-				f , field_type f
-			with Not_found ->
-				let rec loop = function
-					| [] -> raise Not_found
-					| (c,tl) :: l ->
-						try
-							let f = PMap.find i c.cl_fields in
-							f , apply_params c.cl_types tl (field_type f)
-						with
-							Not_found -> loop l
-				in
-				loop c.cl_implements
-		in
-		let rec loop c params =
-			try
-				let f, t = find i c in
-				if not f.cf_public && not priv && not ctx.untyped then display_error ctx ("Cannot access to private field " ^ i) p;
-				field_access ctx get f (apply_params c.cl_types params t) e p
-			with
-				Not_found ->
-					match c.cl_super with
-					| None -> raise Not_found
-					| Some (c,params) -> loop c params
-		in
 		let rec loop_dyn c params =
 			match c.cl_dynamic with
 			| Some t ->
@@ -941,7 +971,9 @@ let type_field ctx e i p get =
 				| Some (c,params) -> loop_dyn c params
 		in
 		(try
-			loop c params
+			let t , f = class_field c i in
+			if not f.cf_public && not (is_parent c ctx.curclass) && not ctx.untyped then display_error ctx ("Cannot access to private field " ^ i) p;
+			field_access ctx get f (apply_params c.cl_types params t) e p			
 		with Not_found -> try
 			loop_dyn c params
 		with Not_found ->
@@ -1736,8 +1768,10 @@ let rec check_interface ctx c p intf params =
 		check_interface ctx c p i2 (List.map (apply_params intf.cl_types params) p2)
 	) intf.cl_implements
 
-
 let check_interfaces ctx c p () =
+	match c.cl_path with
+	| "Proxy" :: _ , _ -> ()
+	| _ ->
 	List.iter (fun (intf,params) -> check_interface ctx c p intf params) c.cl_implements
 
 (* ---------------------------------------------------------------------- *)
@@ -1945,7 +1979,7 @@ let type_module ctx m tdecls loadp =
 			tpath
 		end else try
 			let m2 = Hashtbl.find ctx.types tpath in
-			if String.lowercase (s_type_path m2) = String.lowercase (s_type_path m) then error ("Module " ^ s_type_path m2 ^ " is loaded with a different case") loadp;
+			if String.lowercase (s_type_path m2) = String.lowercase (s_type_path m) then error ("Module " ^ s_type_path m2 ^ " is loaded with a different case than " ^ s_type_path m) loadp;
 			error ("Type name " ^ s_type_path tpath ^ " is redefined from module " ^ s_type_path m2) p
 		with
 			Not_found ->
